# Flam-Project

./: CMakeLists.txt  NativeProcessor.h  README.md  native-lib.cpp
app/: build.gradle.kts
app/cpp/: CMakeLists.txt  NativeProcessor.h  native-lib.cpp
app/src/androidTest/java/com/edgeviewer/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/camera/: CameraController.kt
app/src/main/java/com/edgeviewer/app/: MainActivity.kt
app/src/main/java/com/edgeviewer/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/gl/: GLRenderer.kt
app/src/main/res/values/: themes.xml
app/src/main/web/: index.html  main.ts  styles.css
app/src/test/java/com/edgeviewer/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
